--- a/index.html
+++ b/index.html
@@ -1,107 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>Editor - Production Timer</title>
   <style>
-    body {
-      font-family: sans-serif;
-      background-color: #f3f4f6;
-      padding: 1rem;
-    }
-    label {
-      display: inline-block;
-      width: 140px;
-    }
-    input[type="number"] {
-      width: 40px;
-      padding: 0.5rem;
-      margin-right: 0.5rem;
-    }
-    input[type="time"] {
-      width: 100px;
-      padding: 0.5rem;
-      margin-right: 0.5rem;
-    }
-    .button {
-      padding: 0.5rem 1rem;
-      margin: 0.5rem 1rem 1rem 0;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      background-color: #3b82f6;
-      cursor: pointer;
-    }
-    .button.gray {
-      background-color: gray;
-    }
-    .preview {
-      margin-top: 2rem;
-      padding: 2rem;
-      background: #111;
-      color: white;
-      font-size: 5vw;
-      text-align: center;
-      border-radius: 10px;
-    }
-    #breaks-container > div {
-      margin-bottom: 0.5rem;
-    }
+    body { font-family: sans-serif; background-color: #f3f4f6; padding: 1rem; }
+    label { display: inline-block; width: 140px; }
+    input[type="number"], input[type="time"], input[type="text"] { padding: 0.5rem; margin-right: 0.5rem; }
+    .button { padding: 0.5rem 1rem; margin-right: 1rem; border: none; border-radius: 5px; color: white; background-color: #3b82f6; cursor: pointer; }
+    .button.gray { background-color: gray; }
+    .preview { margin-top: 2rem; padding: 2rem; background: #111; color: white; font-size: 5vw; text-align: center; border-radius: 10px; }
+    #breaks-container > div { margin-bottom: 0.5rem; }
   </style>
-</head>
-<body>
-  <h1>Editor - Line 1</h1>
-  <button class="button" onclick="openDisplay()">Open Display (Fullscreen)</button>
 
-  <div>
-    <label>Countdown:</label>
-    <input id="hours" type="number" min="0" placeholder="hh" />
-    <input id="minutes" type="number" min="0" placeholder="mm" />
-    <input id="seconds" type="number" min="0" placeholder="ss" />
-    <button class="button" id="startBtn">Start</button>
-    <button class="button" id="pauseBtn">Pause</button>
-    <button class="button" id="resetBtn">Reset</button>
-  </div>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.1/firebase-app.js";
+    import { getDatabase, ref, onValue, set, update } from "https://www.gstatic.com/firebasejs/10.12.1/firebase-database.js";
 
-  <div style="margin-top: 1.5rem;">
-    <label>Production Goal:</label>
-    <input id="goalInput" type="number" />
-  </div>
-  <div style="margin-top: 1rem;">
-    <label>Actual Production:</label>
-    <input id="actualInput" type="number" />
-  </div>
+    const firebaseConfig = {
+      apiKey: "AIzaSyCZ0_vkvKUTOls2WjUHWVWwNNJv5r3tcQ0",
+      authDomain: "production-clock-fa387.firebaseapp.com",
+      databaseURL: "https://production-clock-fa387-default-rtdb.firebaseio.com",
+      projectId: "production-clock-fa387",
+      storageBucket: "production-clock-fa387.appspot.com",
+      messagingSenderId: "424015012572",
+      appId: "1:424015012572:web:e4a7cf053c16c367130a19",
+      measurementId: "G-YLMDMBRCLJ"
+    };
 
-  <h2 style="margin-top: 2rem;">Breaks</h2>
-  <div id="breaks-container"></div>
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const lineRef = ref(db, "line1");
 
-  <div class="preview" id="preview">--:--:--</div>
+    const defaultBreaks = [
+      { start: "08:00", end: "08:10", message: "Morning Break", enabled: true },
+      { start: "10:00", end: "10:10", message: "Coffee Break", enabled: true },
+      { start: "11:45", end: "12:15", message: "Lunch Break", enabled: true },
+      { start: "14:20", end: "14:30", message: "Afternoon Break", enabled: true },
+      { start: "16:20", end: "16:30", message: "Clean Up", enabled: false }
+    ];
 
-  <script>
-    // Open Display Page in Kiosk-Style Window
-    function openDisplay() {
-      const screenWidth = screen.availWidth;
-      const screenHeight = screen.availHeight;
+    const defaultState = {
+      countdown: 1 * 3600 + 15 * 60,
+      lastTick: Date.now(),
+      paused: true,
+      breakPaused: false,
+      productionGoal: 0,
+      actualProduction: 0,
+      breaks: defaultBreaks
+    };
 
-      const features = `toolbar=0,location=0,menubar=0,status=0,resizable=1,scrollbars=0,
-                        width=${screenWidth},height=${screenHeight},left=0,top=0`;
-
-      const win = window.open("display.html", "_blank", features);
-
-      win.onload = () => {
-        win.document.documentElement.requestFullscreen?.();
-      };
-    }
-
-    // Set default countdown if not set
-    if (!localStorage.getItem("countdown")) {
-      const defaultSeconds = 1 * 3600 + 15 * 60;
-      localStorage.setItem("countdown", defaultSeconds);
-      localStorage.setItem("lastTick", Date.now());
-      localStorage.setItem("paused", "false");
-      localStorage.setItem("breakPaused", "false");
-    }
+    let state = null;
 
     const preview = document.getElementById("preview");
     const pauseBtn = document.getElementById("pauseBtn");
@@ -109,90 +58,106 @@
     const resetBtn = document.getElementById("resetBtn");
     const breaksContainer = document.getElementById("breaks-container");
 
-    const defaultBreaks = [
-      { start: "08:00", end: "08:10" },
-      { start: "10:00", end: "10:10" },
-      { start: "11:45", end: "12:15" },
-      { start: "14:20", end: "14:30" },
-      { start: "00:00", end: "00:00" }
-    ];
-
-    let breaks = JSON.parse(localStorage.getItem("breaks")) || defaultBreaks.map((b, i) => ({
-      enabled: i < 4,
-      start: b.start,
-      end: b.end,
-    }));
-
-    function saveBreaks() {
-      localStorage.setItem("breaks", JSON.stringify(breaks));
+    function initializeIfNeeded(snapshot) {
+      if (!snapshot.exists()) {
+        set(lineRef, defaultState);
+        return defaultState;
+      }
+      const data = snapshot.val();
+      if (!data.breaks) {
+        data.breaks = defaultBreaks;
+      } else if (data.breaks.length < defaultBreaks.length) {
+        for (let i = data.breaks.length; i < defaultBreaks.length; i++) {
+          data.breaks.push(defaultBreaks[i]);
+        }
+        update(lineRef, { breaks: data.breaks });
+      }
+      return data;
     }
 
-    function createBreakElement(index, br) {
-      const div = document.createElement("div");
+    function updateUI() {
+      if (!state) return;
 
-      const checkbox = document.createElement("input");
-      checkbox.type = "checkbox";
-      checkbox.checked = br.enabled;
-      checkbox.id = `breakEnabled${index}`;
-      checkbox.addEventListener("change", () => {
-        breaks[index].enabled = checkbox.checked;
-        saveBreaks();
-      });
+      document.getElementById("goalInput").value = state.productionGoal ?? "";
+      document.getElementById("actualInput").value = state.actualProduction ?? "";
+      document.getElementById("hours").value = Math.floor(state.countdown / 3600);
+      document.getElementById("minutes").value = Math.floor((state.countdown % 3600) / 60);
+      document.getElementById("seconds").value = state.countdown % 60;
 
-      const label = document.createElement("label");
-      label.htmlFor = checkbox.id;
-      label.textContent = ` Break ${index + 1} `;
-
-      const startInput = document.createElement("input");
-      startInput.type = "time";
-      startInput.value = br.start;
-      startInput.id = `breakStart${index}`;
-      startInput.addEventListener("change", () => {
-        breaks[index].start = startInput.value;
-        saveBreaks();
-      });
-
-      const endInput = document.createElement("input");
-      endInput.type = "time";
-      endInput.value = br.end;
-      endInput.id = `breakEnd${index}`;
-      endInput.addEventListener("change", () => {
-        breaks[index].end = endInput.value;
-        saveBreaks();
-      });
-
-      div.appendChild(checkbox);
-      div.appendChild(label);
-      div.appendChild(document.createTextNode(" Start: "));
-      div.appendChild(startInput);
-      div.appendChild(document.createTextNode(" End: "));
-      div.appendChild(endInput);
-
-      breaksContainer.appendChild(div);
+      pauseBtn.textContent = state.paused ? "Resume" : "Pause";
+      pauseBtn.classList.toggle("gray", state.paused);
+      renderBreaks(state.breaks);
     }
 
-    breaks.forEach((br, i) => createBreakElement(i, br));
+    onValue(lineRef, (snapshot) => {
+      state = initializeIfNeeded(snapshot);
+      updateUI();
+    });
+
+    function renderBreaks(breaks) {
+      breaksContainer.innerHTML = "";
+      breaks.forEach((br, index) => {
+        const div = document.createElement("div");
+
+        const checkbox = document.createElement("input");
+        checkbox.type = "checkbox";
+        checkbox.checked = br.enabled ?? true;
+        checkbox.addEventListener("change", () => {
+          state.breaks[index].enabled = checkbox.checked;
+          update(lineRef, { breaks: state.breaks });
+        });
+
+        const label = document.createElement("label");
+        label.textContent = `Break ${index + 1}`;
+
+        const startInput = document.createElement("input");
+        startInput.type = "time";
+        startInput.value = br.start;
+        startInput.addEventListener("change", () => {
+          state.breaks[index].start = startInput.value;
+          update(lineRef, { breaks: state.breaks });
+        });
+
+        const endInput = document.createElement("input");
+        endInput.type = "time";
+        endInput.value = br.end;
+        endInput.addEventListener("change", () => {
+          state.breaks[index].end = endInput.value;
+          update(lineRef, { breaks: state.breaks });
+        });
+
+        const messageInput = document.createElement("input");
+        messageInput.type = "text";
+        messageInput.placeholder = "Break Message";
+        messageInput.value = br.message ?? "";
+        messageInput.addEventListener("change", () => {
+          state.breaks[index].message = messageInput.value;
+          update(lineRef, { breaks: state.breaks });
+        });
+
+        div.appendChild(checkbox);
+        div.appendChild(label);
+        div.appendChild(document.createTextNode(" Start: "));
+        div.appendChild(startInput);
+        div.appendChild(document.createTextNode(" End: "));
+        div.appendChild(endInput);
+        div.appendChild(document.createTextNode(" Msg: "));
+        div.appendChild(messageInput);
+
+        breaksContainer.appendChild(div);
+      });
+    }
 
     function updateCountdownPreview() {
-      const paused = localStorage.getItem("paused") === "true";
-      const lastTick = parseInt(localStorage.getItem("lastTick")) || Date.now();
-      const total = parseInt(localStorage.getItem("countdown")) || 0;
-
-      let remaining;
-
-      if (paused) {
-        remaining = total;
-      } else {
-        const elapsed = Math.floor((Date.now() - lastTick) / 1000);
-        remaining = total - elapsed;
-      }
-
+      if (!state) return;
+      const now = Date.now();
+      const elapsed = Math.floor((now - state.lastTick) / 1000);
+      let remaining = state.paused ? state.countdown : state.countdown - elapsed;
       if (remaining < 0) remaining = 0;
 
-      const h = Math.floor(remaining / 3600).toString().padStart(2, '0');
-      const m = Math.floor((remaining % 3600) / 60).toString().padStart(2, '0');
-      const s = (remaining % 60).toString().padStart(2, '0');
-
+      const h = String(Math.floor(remaining / 3600)).padStart(2, '0');
+      const m = String(Math.floor((remaining % 3600) / 60)).padStart(2, '0');
+      const s = String(remaining % 60).padStart(2, '0');
       preview.textContent = `${h}:${m}:${s}`;
     }
 
@@ -203,35 +168,16 @@
         (parseInt(document.getElementById("hours").value) || 0) * 3600 +
         (parseInt(document.getElementById("minutes").value) || 0) * 60 +
         (parseInt(document.getElementById("seconds").value) || 0);
-
-      localStorage.setItem("countdown", totalSeconds);
-      localStorage.setItem("lastTick", Date.now());
-      localStorage.setItem("paused", "false");
-      localStorage.setItem("breakPaused", "false");
-
-      pauseBtn.textContent = "Pause";
-      pauseBtn.classList.remove("gray");
+      set(lineRef, { countdown: totalSeconds, lastTick: Date.now(), paused: false, breakPaused: false, productionGoal: state.productionGoal ?? 0, actualProduction: state.actualProduction ?? 0, breaks: state.breaks });
     });
 
     pauseBtn.addEventListener("click", () => {
-      const paused = localStorage.getItem("paused") === "true";
+      if (!state) return;
+      const now = Date.now();
+      const elapsed = Math.floor((now - state.lastTick) / 1000);
+      const remaining = state.countdown - elapsed;
 
-      if (!paused) {
-        const start = parseInt(localStorage.getItem("lastTick")) || Date.now();
-        const total = parseInt(localStorage.getItem("countdown")) || 0;
-        const elapsed = Math.floor((Date.now() - start) / 1000);
-        const remaining = total - elapsed;
-
-        localStorage.setItem("countdown", remaining);
-        localStorage.setItem("paused", true);
-        pauseBtn.textContent = "Resume";
-        pauseBtn.classList.add("gray");
-      } else {
-        localStorage.setItem("lastTick", Date.now());
-        localStorage.setItem("paused", false);
-        pauseBtn.textContent = "Pause";
-        pauseBtn.classList.remove("gray");
-      }
+      update(lineRef, { countdown: state.paused ? state.countdown : Math.max(remaining, 0), lastTick: Date.now(), paused: !state.paused });
     });
 
     resetBtn.addEventListener("click", () => {
@@ -239,37 +185,58 @@
         (parseInt(document.getElementById("hours").value) || 0) * 3600 +
         (parseInt(document.getElementById("minutes").value) || 0) * 60 +
         (parseInt(document.getElementById("seconds").value) || 0);
-
-      localStorage.setItem("countdown", totalSeconds);
-      localStorage.setItem("lastTick", Date.now());
-      localStorage.setItem("paused", true);
-
-      pauseBtn.textContent = "Pause";
-      pauseBtn.classList.remove("gray");
+      update(lineRef, { countdown: totalSeconds, lastTick: Date.now(), paused: true });
     });
 
     document.getElementById("goalInput").addEventListener("input", (e) => {
-      localStorage.setItem("productionGoal", e.target.value);
+      update(lineRef, { productionGoal: parseInt(e.target.value) || 0 });
     });
 
     document.getElementById("actualInput").addEventListener("input", (e) => {
-      localStorage.setItem("actualProduction", e.target.value);
+      update(lineRef, { actualProduction: parseInt(e.target.value) || 0 });
     });
 
-    window.addEventListener("load", () => {
-      const paused = localStorage.getItem("paused") === "true";
-      pauseBtn.textContent = paused ? "Resume" : "Pause";
-      if (paused) pauseBtn.classList.add("gray");
-
-      document.getElementById("goalInput").value = localStorage.getItem("productionGoal") || "";
-      document.getElementById("actualInput").value = localStorage.getItem("actualProduction") || "";
-
-      const total = parseInt(localStorage.getItem("countdown")) || 0;
-      document.getElementById("hours").value = Math.floor(total / 3600);
-      document.getElementById("minutes").value = Math.floor((total % 3600) / 60);
-      document.getElementById("seconds").value = total % 60;
-    });
+    window.setPreset = function (h, m, s) {
+      document.getElementById("hours").value = h;
+      document.getElementById("minutes").value = m;
+      document.getElementById("seconds").value = s;
+    }
   </script>
+</head>
+
+<body>
+  <h1>Editor - Line 1</h1>
+  <button class="button" onclick="window.open('display.html','Display','toolbar=no,scrollbars=no,resizable=no,fullscreen=yes')">Open Display</button>
+
+  <div style="margin-top: 2rem;">
+    <label>Countdown:</label>
+    <input id="hours" type="number" min="0" placeholder="hh" />
+    <input id="minutes" type="number" min="0" placeholder="mm" />
+    <input id="seconds" type="number" min="0" placeholder="ss" />
+    <button class="button" id="startBtn">Start</button>
+    <button class="button" id="pauseBtn">Pause</button>
+    <button class="button" id="resetBtn">Reset</button>
+  </div>
+
+  <div style="margin-top: 1rem;">
+    <button class="button" onclick="setPreset(1, 0, 0)">1:00:00</button>
+    <button class="button" onclick="setPreset(1, 15, 0)">1:15:00</button>
+    <button class="button" onclick="setPreset(1, 25, 0)">1:25:00</button>
+  </div>
+
+  <div style="margin-top: 1.5rem;">
+    <label>Production Goal:</label>
+    <input id="goalInput" type="number" />
+  </div>
+
+  <div style="margin-top: 1rem;">
+    <label>Actual Production:</label>
+    <input id="actualInput" type="number" />
+  </div>
+
+  <h2 style="margin-top: 2rem;">Breaks</h2>
+  <div id="breaks-container"></div>
+
+  <div class="preview" id="preview">--:--:--</div>
 </body>
 </html>
-
