--- a/display.html
+++ b/display.html
@@ -1,74 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Production Countdown Display</title>
+  <meta charset="UTF-8">
+  <title>Production Display</title>
   <style>
-    body {
-      margin: 0;
-      font-family: sans-serif;
-      background-color: #000;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      height: 100vh;
-      text-align: center;
-    }
-
-    #timer {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: flex-start;
-      padding-top: 1rem;
-      font-size: 22vw;
-      font-weight: bold;
-      background-color: #111;
-    }
-
-    #break-message {
-      font-size: 2rem;
-      padding: 1rem;
-      background-color: #333;
-      display: none;
-    }
-
-    #bottom-bar {
-      display: flex;
-      flex-direction: column;
-      background-color: #222;
-      padding: 5rem 2rem;
-      min-height: 250px;
-    }
-
-    #date-time-row {
-      display: flex;
-      justify-content: center;
-      text-align: center;
-      padding-bottom: 4rem;
-      font-size: clamp(50px, 4vw, 300px);
-    }
-
-    #goal-actual-row {
-      display: flex;
-      justify-content: space-between;
-      font-size: clamp(40px, 2vw, 100px);
-    }
-
-    .section {
-      flex: 1;
-      text-align: center;
-    }
-
-    #goal {
-      text-align: center;
-    }
-
-    #actual {
-      text-align: center;
-    }
+    body { margin: 0; font-family: sans-serif; background: #000; color: #fff; display: flex; flex-direction: column; height: 100vh; text-align: center; }
+    #timer { flex: 1; display: flex; justify-content: center; align-items: flex-start; padding-top: 1rem; font-size: 22vw; font-weight: bold; background-color: #111; }
+    #break-message { font-size: 2rem; padding: 1rem; background-color: #333; display: none; }
+    #bottom-bar { display: flex; flex-direction: column; background-color: #222; padding: 5rem 2rem; min-height: 250px; }
+    #date-time-row { display: flex; justify-content: center; text-align: center; padding-bottom: 4rem; font-size: clamp(50px, 4vw, 300px); }
+    #goal-actual-row { display: flex; justify-content: space-between; font-size: clamp(40px, 2vw, 100px); }
+    .section { flex: 1; text-align: center; }
   </style>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.1/firebase-app.js";
+    import { getDatabase, ref, onValue, get } from "https://www.gstatic.com/firebasejs/10.12.1/firebase-database.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyCZ0_vkvKUTOls2WjUHWVWwNNJv5r3tcQ0",
+    authDomain: "production-clock-fa387.firebaseapp.com",
+    databaseURL: "https://production-clock-fa387-default-rtdb.firebaseio.com",
+    projectId: "production-clock-fa387",
+    storageBucket: "production-clock-fa387.firebasestorage.app",
+    messagingSenderId: "424015012572",
+    appId: "1:424015012572:web:e4a7cf053c16c367130a19",
+    measurementId: "G-YLMDMBRCLJ"
+  };
+
+    const app = initializeApp(firebaseConfig);
+    const db = getDatabase(app);
+    const lineRef = ref(db, "line1");
+
+    const timerElem = document.getElementById("timer");
+    const breakMessage = document.getElementById("break-message");
+    const dateTimeRow = document.getElementById("date-time-row");
+    const goalElem = document.getElementById("goal");
+    const actualElem = document.getElementById("actual");
+
+    let state = null;
+
+    function updateDateTime() {
+      const now = new Date();
+      const dateStr = now.toLocaleDateString(undefined, { weekday: 'long', month: 'long', day: 'numeric' });
+      const timeStr = now.toLocaleTimeString(undefined, { hour: '2-digit', minute: '2-digit'});
+      dateTimeRow.textContent = `${dateStr} | ${timeStr}`;
+    }
+
+    function checkBreak(nowMinutes, breaks) {
+      for (const br of breaks || []) {
+        if (!br.enabled) continue;
+        const [sh, sm] = br.start.split(":").map(Number);
+        const [eh, em] = br.end.split(":").map(Number);
+        const startMins = sh * 60 + sm;
+        const endMins = eh * 60 + em;
+        if (startMins <= nowMinutes && nowMinutes < endMins) {
+          return br.message || "Break Time";
+        }
+      }
+      return null;
+    }
+
+    function updateCountdown() {
+      if (!state) return;
+
+      const now = Date.now();
+      const elapsed = Math.floor((now - state.lastTick) / 1000);
+      let remaining = state.paused ? state.countdown : state.countdown - elapsed;
+      if (remaining < 0) remaining = 0;
+
+      const h = String(Math.floor(remaining / 3600)).padStart(2, '0');
+      const m = String(Math.floor((remaining % 3600) / 60)).padStart(2, '0');
+      const s = String(remaining % 60).padStart(2, '0');
+      timerElem.textContent = `${h}:${m}:${s}`;
+
+      const nowMinutes = new Date().getHours() * 60 + new Date().getMinutes();
+      const breakText = checkBreak(nowMinutes, state.breaks);
+      if (breakText) {
+        breakMessage.style.display = "block";
+        breakMessage.textContent = breakText;
+      } else {
+        breakMessage.style.display = "none";
+      }
+
+      goalElem.textContent = `Goal: ${state.productionGoal ?? "--"}`;
+      actualElem.textContent = `Actual: ${state.actualProduction ?? "--"}`;
+    }
+
+    onValue(lineRef, (snapshot) => {
+      state = snapshot.val();
+    });
+
+    setInterval(() => { updateCountdown(); updateDateTime(); }, 1000);
+  </script>
 </head>
 <body>
   <h1>Line 1</h1>
@@ -81,108 +104,5 @@
       <div class="section" id="actual">Actual: --</div>
     </div>
   </div>
-
-  <script>
-    const preview = document.getElementById("timer");
-    const dateTimeRow = document.getElementById("date-time-row");
-    const goalElem = document.getElementById("goal");
-    const actualElem = document.getElementById("actual");
-    const breakMessage = document.getElementById("break-message");
-
-    if (!localStorage.getItem("countdown")) {
-      const defaultSeconds = 1 * 3600 + 15 * 60;
-      localStorage.setItem("countdown", defaultSeconds);
-      localStorage.setItem("lastTick", Date.now());
-      localStorage.setItem("paused", "false");
-      localStorage.setItem("breakPaused", "false");
-    }
-
-    function isInBreak() {
-      const breaks = JSON.parse(localStorage.getItem("breaks")) || [];
-      const now = new Date();
-      const currentMinutes = now.getHours() * 60 + now.getMinutes();
-
-      for (const br of breaks) {
-        if (!br.enabled) continue;
-        const [startH, startM] = br.start.split(":").map(Number);
-        const [endH, endM] = br.end.split(":").map(Number);
-        const startMinutes = startH * 60 + startM;
-        const endMinutes = endH * 60 + endM;
-
-        if (startMinutes <= currentMinutes && currentMinutes < endMinutes) {
-          return br.message || "Break Time";
-        }
-      }
-      return null;
-    }
-
-    function updateDateTime() {
-      const now = new Date();
-      const dateStr = now.toLocaleDateString(undefined, { weekday: 'long', month: 'long', day: 'numeric' });
-      const timeStr = now.toLocaleTimeString(undefined, { hour: '2-digit', minute: '2-digit'});
-      dateTimeRow.textContent = `${dateStr} | ${timeStr}`;
-    }
-
-    function updateGoalAndActual() {
-      const goal = localStorage.getItem("productionGoal") || "--";
-      const actual = localStorage.getItem("actualProduction") || "--";
-      goalElem.textContent = `Goal: ${goal}`;
-      actualElem.textContent = `Actual: ${actual}`;
-    }
-
-    function updateCountdown() {
-      const breakText = isInBreak();
-      const paused = localStorage.getItem("paused") === "true";
-      const breakPaused = localStorage.getItem("breakPaused") === "true";
-      const now = Date.now();
-
-      if (breakText && !paused) {
-        if (!breakPaused) {
-          const lastTick = parseInt(localStorage.getItem("lastTick")) || now;
-          const total = parseInt(localStorage.getItem("countdown")) || 0;
-          const elapsed = Math.floor((now - lastTick) / 1000);
-          const remaining = total - elapsed;
-
-          localStorage.setItem("countdown", Math.max(remaining, 0));
-          localStorage.setItem("paused", "true");
-          localStorage.setItem("breakPaused", "true");
-        }
-      } else if (!breakText && breakPaused) {
-        localStorage.setItem("lastTick", now);
-        localStorage.setItem("paused", "false");
-        localStorage.setItem("breakPaused", "false");
-      }
-
-      const isPaused = localStorage.getItem("paused") === "true";
-      const total = parseInt(localStorage.getItem("countdown")) || 0;
-      const lastTick = parseInt(localStorage.getItem("lastTick")) || now;
-
-      let elapsed = Math.floor((now - lastTick) / 1000);
-      let remaining = isPaused ? total : total - elapsed;
-      if (remaining < 0) remaining = 0;
-
-      const h = Math.floor(remaining / 3600).toString().padStart(2, '0');
-      const m = Math.floor((remaining % 3600) / 60).toString().padStart(2, '0');
-      const s = (remaining % 60).toString().padStart(2, '0');
-
-      preview.textContent = `${h}:${m}:${s}`;
-
-      if (breakText) {
-        breakMessage.textContent = breakText;
-        breakMessage.style.display = "block";
-      } else {
-        breakMessage.style.display = "none";
-      }
-    }
-
-    function updateAll() {
-      updateCountdown();
-      updateDateTime();
-      updateGoalAndActual();
-    }
-
-    setInterval(updateAll, 1000);
-    updateAll();
-  </script>
 </body>
 </html>
