--- a/display.html
+++ b/display.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Production Display</title>
   <style>
-    body { margin: 0; font-family: sans-serif; background: #000; color: red; display: flex; flex-direction: column; height: 100vh; text-align: center; }
+    body { margin: 0; font-family: sans-serif; background: #000; color: r#ff0000; display: flex; flex-direction: column; height: 100vh; text-align: center; }
     #timer { flex: 1; display: flex; justify-content: center; align-items: flex-start; padding-top: 1rem; font-size: 22vw; font-weight: bold; background-color: #111; }
     #break-message { font-size: 2rem; padding: 1rem; background-color: #333; display: none; }
     #bottom-bar { display: flex; flex-direction: column; background-color: #222; padding: 5rem 2rem; min-height: 250px; }
