--- a/display.html
+++ b/display.html
@@ -8,8 +8,8 @@
     #timer { flex: 1; display: flex; justify-content: center; align-items: flex-start; padding-top: 1rem; font-size: 22vw; font-weight: bold; background-color: #111; }
     #break-message { font-size: 2rem; padding: 1rem; background-color: #333; display: none; }
     #bottom-bar { display: flex; flex-direction: column; background-color: #222; padding: 5rem 2rem; min-height: 250px; }
-    #date-time-row { display: flex; justify-content: center; text-align: center; padding-bottom: 4rem; font-size: clamp(50px, 4vw, 300px); }
-    #goal-actual-row { display: flex; justify-content: space-between; font-size: clamp(40px, 2vw, 100px); }
+    #date-time-row { display: flex; justify-content: center; text-align: center; padding-bottom: 4rem; color: #fff; font-size: clamp(50px, 4vw, 300px); }
+    #goal-actual-row { display: flex; justify-content: space-between; color: #fff; font-size: clamp(40px, 2vw, 100px); }
     .section { flex: 1; text-align: center; }
   </style>
 
